css/main.css
/* ... */
/* CSS for Google Play store icon on Digital Go Bag page */
img.dgobag-play {
}

/****************
*    Header     *
****************/

/* CSS for RRAIN logo on header */
#index-header-logo {
  float: right;
  width: 45px;
  height: auto !important;
  margin-right: 15px !important;
  margin-top: -40px;
}

/* CSS for RRAIN logo on header for non-index page */
#header-logo {
  float: right;
  width: 45px;
  height: auto !important;
  margin-right: 15px !important;
  margin-top: -50px;
}

/* CSS for green bar on header */
.blog-title {
  background-color: #00823e;
	color: white !important;
  font-size: 16pt !important;
  font-weight: bold !important;
	font-family:  'Helvetica' !important;
	border: none !important;
	padding: 13px 50px 13px 13px !important;
}

/* CSS for main title on header */
.blog-title a {
  color: white;
  text-decoration: none;
}

/* CSS for sub-title on header */
.header-selection {
  color: white;
  font-family: 'Helvetica';
  font-size: 13pt !important;
  font-weight: normal !important;
  border: none !important;
  padding-right: 25px;
}

/****************
*    Footer     *
****************/

.blog-footer {
  padding-left: 20px !important;
  padding-right: 15px !important;
  font-family: sans-serif;
  font-size: 8pt;
  text-align: center;
}

.blog-footer a {
  text-decoration: none;
}

.blog-footer p:last-child {
  margin-bottom: 0px;
}

.footer-text {
  max-width: 500px !important;
  text-align: center !important;
  padding-left: 35px;
  padding-right: 35px;
  display: inline-block;
  /*position: relative;*/
}

#foot-img {
  width: auto;
  height: auto;
  max-height: 50px;
  margin-right: 15pt;
}

/****************
*    Content    *
****************/

/* CSS for index page menu titles */
.blog-post-title {

}

.blog-post-title a {
  font-size: 13pt;
  font-weight: bold;
  font-family: 'Helvetica' !important;
  color: #1E2D5F;
  text-decoration: none;
  position: absolute;
  margin-top: 25px;
  margin-right: 40px;
}

/* CSS for non-index page sub-titles */
.sub-title {
  margin-top: -6px;
  font-family: 'Helvetica' !important;
  font-size: 11pt;
  position: relative;
  margin-left: 25px;
  margin-right: 50px;
}

.sub-title a {
  font-size: 13pt;
  font-weight: bold;
  font-family: 'Helvetica' !important;
  color: #1E2D5F;
  text-decoration: none;
  margin-top: 24px;
}

/* CSS for Digital Go Bag page */
.dgobag {
  font-family: 'Helvetica' !important;
  font-size: 11pt;
  position: relative;
  margin-left: 180px;
  margin-right: 50px;
}

.dgobag a {
  font-size: 13pt;
  font-weight: bold;
  font-family: 'Helvetica' !important;
  color: #1E2D5F;
  text-decoration: none;
}

/* CSS for CEMP page */
.cemp {
  font-family: "Helvetica";
  color: black;
  font-size: 10.5pt;
  padding: 0px 30px 0px 30px;
}

.cemp a {
  text-decoration: none;
  color: #2665bd;
  line-height: 175%;
}

/* CSS for a green box with shadow */
.box {
  font-size: .8em;
  border: 3px solid green;
  margin: 25px;
  padding: 0px 10px 15px 10px;
  box-shadow: 10px 10px 5px #888888;
}

/* CSS for About page */
.about {
  font-family: "Helvetica";
  color: black;
  font-size: 12pt;
  max-width: 800px !important;
  margin: 0 auto;
  padding-left: 20px;
  padding-right: 20px;
}

.about a {
  text-decoration: none;
  color: #2665bd;
}

.weather {
  font-family: "Helvetica";
  color: black;
  font-size: 12.5pt !important;
  line-height: 175%;
  padding: 10px 30px 10px 30px;
}

.weather a {
  text-decoration: none;
  color: #2665bd;
  line-height: 175%;
}

/*CSS for dropdown menu for weather advisory search*/
.dropdown {
  position: relative;
  display: inline-block;
}

.content {
  margin-top: 2px;
  position: absolute;
  overflow-y: scroll;
  overflow-x: hidden;
  z-index: 1;
  visibility: hidden;
  height: 250px;
  width: 175px;
}

.content a {
  height: 26px;
  display: block;
  text-decoration: none;
  color: white;
  font-family: 'Helvetica' !important;
  font-size: 10pt;
  text-transform: uppercase;
  font-weight: 600;
  background-color: #77af92;
  border-width: 2px;
  border-bottom: 2px solid white;
  border-top: none;
  border-right: none;
}

.content a:hover {
  background-color: #239b5d;
}

#map {
  position: relative;
  height: 100%;
  top: -20px !important;
  margin-bottom: -25px;
  font-family: "Helvetica";
  color: black;
  font-size: 12.5pt !important;
  z-index: 1;
}

#events {
  position: absolute;
  white-space: nowrap;
  overflow: hidden;
  text-align: center;
  width: 100%;
}

/****************
*   Exceptions  *
****************/

@media screen and (max-width: 551px) {
  img.cityhall {
    top: 25px;
  }

  hr.cityhall {
    margin-top: 30px;
  }
}

@media screen and (max-width: 414px) {
  button {
    height: 40px;
    width: 125px;
  }

  button#search {
    position: relative;
    top: -7px;
  }

  .content {
    width: 125px;
  }

  .content a {
    font-size: 8pt;
  }
}

@media screen and (max-width: 390px) {
  img.cityhall {
    top: 37px;
  }

  hr.cityhall {
    margin-top: 49px;
  }
}

@media screen and (max-width: 388px) {
  img.chem {
    top: 23px;
  }

  hr.chem {
    margin-top: 28px;
  }
}

@media screen and (max-width: 384px) {
  img.dgobag-logo-oem-shelter {
    margin-left: -120px;
  }

  img.dgobag-logo {
    margin-left: -110px;
  }

  .dgobag {
    margin-left: 150px;
  }

  hr.dgobag {
    margin-left: -120px;
  }
}

@media screen and (max-width: 382px) {
  img.wa {
    margin-top: 10px;
  }

  img.chem {
    top: 22px;
  }

  hr.chem {
    margin-top: 24px;
  }
}

@media screen and (max-width: 337px) {
  img.dgobag-logo-oem-shelter {
    position: absolute;
  }

  img.dgobag-logo {
    position: absolute;
  }
}

@media screen and (max-width: 329px) {
  img.diseases {
    margin-top: 10px;
  }
}

@media screen and (max-width: 325px) {
  img.cityhall {
    top: 46px;
  }

  hr.cityhall {
    margin-top: 70px;
  }
}

@media screen and (max-width: 316px) {
  img.cloud {
    top: 24px;
  }

  hr.cloud {
    margin-top: 20px;
  }
}
/* ... */

